@@ -47,6 +47,7 @@ membind:alloc_membind = 0
 membind:firsttouch_membind = 0
 membind:bind_membind = 0
 membind:interleave_membind = 0
+membind:weighted_interleave_membind = 0
 membind:nexttouch_membind = 0
 membind:migrate_membind = 0
 membind:get_area_memlocation = 0
