@@ -23,6 +23,7 @@ Version 2.11.0
   + Add hwloc_obj_set_subtype().
   + Add HWLOC_MEMBIND_WEIGHTED_INTERLEAVE memory binding policy on
     Linux 6.9+. Thanks to Honggyu Kim for the patch.
+    - weighted_interleave_membind is added to membind support bits.
 * Misc
   + The MemoryTiersNr info attribute in the root object now says how many
     memory tiers were built. Thanks to Antoine Morvan for the report.
